help fix infinite_pattern